bk_ida/gccida/g1/build_conditional_expr
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_conditional_expr/src/c-typeck.c:3841:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_conditional_expr/src/c-typeck.c:3848:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *section_name; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_conditional_expr/src/c-typeck.c:3849:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_conditional_expr/src/c-typeck.c:3854:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_conditional_expr/src/c-typeck.c:3855:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_conditional_expr/src/c-typeck.c:3856:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_conditional_expr/src/c-typeck.c:3858:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_conditional_expr/src/c-typeck.c:3859:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_conditional_expr/src/c-typeck.c:3895:29: error: expected expression
section_name = ( tree_node *)( ( unsigned int)v10 - 6); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_conditional_expr/src/c-typeck.c:3895:18: error: use of undeclared identifier 'tree_node'
section_name = ( tree_node *)( ( unsigned int)v10 - 6); 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_conditional_expr/src/c-typeck.c:3898:29: error: expected expression
section_name = ( tree_node *)( unsigned int)( v11 - 6); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_conditional_expr/src/c-typeck.c:3898:18: error: use of undeclared identifier 'tree_node'
section_name = ( tree_node *)( unsigned int)( v11 - 6); 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_conditional_expr/src/c-typeck.c:3898:32: error: expected expression
section_name = ( tree_node *)( unsigned int)( v11 - 6); 
                               ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_conditional_expr/src/obj/c-typeck.o] Error 1
